- Added overflow checks to wordwrap() function. (Ilia)
- Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 
  (also fixes bug #36764). (Tony)
- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Fixed debug_zval_dump() to support private and protected members. (Dmitry)
- Fixed SoapFault::getMessage(). (Dmitry)
- Fixed bug #36878 (error messages are printed even though an exception has 
  been thrown). (Tony)
- Fixed bug #36869 (memory leak in output buffering when using chunked output).
  (Tony)
- Fixed bug #36859 (DOMElement crashes when calling __construct when 
  clone'ing). (Tony)
- Fixed bug #36857 (Added support for partial content fetching to the HTTP
  streams wrapper). (Ilia)
- Fixed bug #36851 (Documentation and code discrepancies for NULL data 
  in oci_fetch_*() functions). (Tony)
- Fixed bug #36825 (Exceptions thrown in ArrayObject::offsetGet cause 
  segfault). (Tony)
- Fixed bug #36820 (Privileged connection with an Oracle password file fails). 
  (Tony)
- Fixed bug #36809 (__FILE__ behavior changed). (Dmitry)
- Fixed bug #36808 (syslog ident becomes garbage between requests). (Tony)
- Fixed bug #36802 (mysqli_set_charset() crash with a non-open connection).
  (Ilia)
- Fixed bug #36745 (No error message when load data local file isn't found).
  (Georg)
- Fixed bug #36721 (The SoapServer is not able to send a header that it didn't
  receive). (Dmitry)
- Fixed bug #36756 (DOMDocument::removeChild corrupts node). (Rob)
- Fixed bug #36749 (SOAP: 'Error Fetching http body' when using HTTP Proxy).
  (Dmitry)
- Fixed bug #36743 (In a class extending XMLReader array properties are not 
  writable). (Tony)
- Fixed bug #36727 (segfault in pdo_pgsql bindValue() when no parameters are 
  defined). (Tony)
- Fixed bug #36697 (Transparency is lost when using imagecreatetruecolor).
  (Pierre)
- Fixed bug #36689 (Removed arbitrary limit on the length of syslog messages).
  (Ilia)